[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "simple-snake"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
